[gd_scene load_steps=4 format=2]

[ext_resource path="res://InGameSettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://MenuMusic.mp3" type="AudioStream" id=2]
[ext_resource path="res://art/Backgrounds/blue.png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 456.0
margin_top = 136.0
margin_right = 577.0
margin_bottom = 389.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="VBoxContainer2"]
margin_right = 121.0
margin_bottom = 20.0
text = "Resume"

[node name="Main Menu" type="Button" parent="VBoxContainer2"]
margin_top = 24.0
margin_right = 121.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -168, -134.333 )
text = "Main Menu"

[node name="Audio" type="Button" parent="VBoxContainer2"]
margin_top = 48.0
margin_right = 121.0
margin_bottom = 68.0
text = "Audio"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Background" type="Node2D" parent="."]
z_index = -1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 128, 128 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Background"]
position = Vector2( 384, 128 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Background"]
position = Vector2( 640, 128 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="Background"]
position = Vector2( 896, 128 )
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="Background"]
position = Vector2( 408, 344 )
texture = ExtResource( 3 )
offset = Vector2( -280, 40 )

[node name="Sprite6" type="Sprite" parent="Background"]
position = Vector2( 408, 344 )
texture = ExtResource( 3 )
offset = Vector2( -24, 40 )

[node name="Sprite7" type="Sprite" parent="Background"]
position = Vector2( 408, 344 )
texture = ExtResource( 3 )
offset = Vector2( 232, 40 )

[node name="Sprite8" type="Sprite" parent="Background"]
position = Vector2( 408, 344 )
texture = ExtResource( 3 )
offset = Vector2( 488, 40 )

[node name="Sprite9" type="Sprite" parent="Background"]
position = Vector2( 128, 640 )
texture = ExtResource( 3 )

[node name="Sprite10" type="Sprite" parent="Background"]
position = Vector2( 384, 640 )
texture = ExtResource( 3 )

[node name="Sprite11" type="Sprite" parent="Background"]
position = Vector2( 640, 640 )
texture = ExtResource( 3 )

[node name="Sprite12" type="Sprite" parent="Background"]
position = Vector2( 896, 640 )
texture = ExtResource( 3 )

[node name="Sprite13" type="Sprite" parent="Background"]
position = Vector2( 1152, 128 )
texture = ExtResource( 3 )

[node name="Sprite14" type="Sprite" parent="Background"]
position = Vector2( 1408, 128 )
texture = ExtResource( 3 )

[node name="Sprite15" type="Sprite" parent="Background"]
position = Vector2( 1664, 128 )
texture = ExtResource( 3 )

[node name="Sprite16" type="Sprite" parent="Background"]
position = Vector2( 1920, 128 )
texture = ExtResource( 3 )

[node name="Sprite17" type="Sprite" parent="Background"]
position = Vector2( 1432, 344 )
texture = ExtResource( 3 )
offset = Vector2( -280, 40 )

[node name="Sprite18" type="Sprite" parent="Background"]
position = Vector2( 1432, 344 )
texture = ExtResource( 3 )
offset = Vector2( -24, 40 )

[node name="Sprite19" type="Sprite" parent="Background"]
position = Vector2( 1432, 344 )
texture = ExtResource( 3 )
offset = Vector2( 232, 40 )

[node name="Sprite20" type="Sprite" parent="Background"]
position = Vector2( 1432, 344 )
texture = ExtResource( 3 )
offset = Vector2( 488, 40 )

[node name="Sprite21" type="Sprite" parent="Background"]
position = Vector2( 1152, 640 )
texture = ExtResource( 3 )

[node name="Sprite22" type="Sprite" parent="Background"]
position = Vector2( 1408, 640 )
texture = ExtResource( 3 )

[node name="Sprite23" type="Sprite" parent="Background"]
position = Vector2( 1664, 640 )
texture = ExtResource( 3 )

[node name="Sprite24" type="Sprite" parent="Background"]
position = Vector2( 1920, 640 )
texture = ExtResource( 3 )

[node name="Sprite25" type="Sprite" parent="Background"]
position = Vector2( 128, 896 )
texture = ExtResource( 3 )

[node name="Sprite26" type="Sprite" parent="Background"]
position = Vector2( 384, 896 )
texture = ExtResource( 3 )

[node name="Sprite27" type="Sprite" parent="Background"]
position = Vector2( 640, 896 )
texture = ExtResource( 3 )

[node name="Sprite28" type="Sprite" parent="Background"]
position = Vector2( 896, 896 )
texture = ExtResource( 3 )

[node name="Sprite29" type="Sprite" parent="Background"]
position = Vector2( 408, 1112 )
texture = ExtResource( 3 )
offset = Vector2( -280, 40 )

[node name="Sprite30" type="Sprite" parent="Background"]
position = Vector2( 408, 1112 )
texture = ExtResource( 3 )
offset = Vector2( -24, 40 )

[node name="Sprite31" type="Sprite" parent="Background"]
position = Vector2( 408, 1112 )
texture = ExtResource( 3 )
offset = Vector2( 232, 40 )

[node name="Sprite32" type="Sprite" parent="Background"]
position = Vector2( 408, 1112 )
texture = ExtResource( 3 )
offset = Vector2( 488, 40 )

[node name="Sprite33" type="Sprite" parent="Background"]
position = Vector2( 128, 1408 )
texture = ExtResource( 3 )

[node name="Sprite34" type="Sprite" parent="Background"]
position = Vector2( 384, 1408 )
texture = ExtResource( 3 )

[node name="Sprite35" type="Sprite" parent="Background"]
position = Vector2( 640, 1408 )
texture = ExtResource( 3 )

[node name="Sprite36" type="Sprite" parent="Background"]
position = Vector2( 896, 1408 )
texture = ExtResource( 3 )

[node name="Sprite37" type="Sprite" parent="Background"]
position = Vector2( 1152, 896 )
texture = ExtResource( 3 )

[node name="Sprite38" type="Sprite" parent="Background"]
position = Vector2( 1408, 896 )
texture = ExtResource( 3 )

[node name="Sprite39" type="Sprite" parent="Background"]
position = Vector2( 1664, 896 )
texture = ExtResource( 3 )

[node name="Sprite40" type="Sprite" parent="Background"]
position = Vector2( 1920, 896 )
texture = ExtResource( 3 )

[node name="Sprite41" type="Sprite" parent="Background"]
position = Vector2( 1432, 1112 )
texture = ExtResource( 3 )
offset = Vector2( -280, 40 )

[node name="Sprite42" type="Sprite" parent="Background"]
position = Vector2( 1432, 1112 )
texture = ExtResource( 3 )
offset = Vector2( -24, 40 )

[node name="Sprite43" type="Sprite" parent="Background"]
position = Vector2( 1432, 1112 )
texture = ExtResource( 3 )
offset = Vector2( 232, 40 )

[node name="Sprite44" type="Sprite" parent="Background"]
position = Vector2( 1432, 1112 )
texture = ExtResource( 3 )
offset = Vector2( 488, 40 )

[node name="Sprite45" type="Sprite" parent="Background"]
position = Vector2( 1152, 1408 )
texture = ExtResource( 3 )

[node name="Sprite46" type="Sprite" parent="Background"]
position = Vector2( 1408, 1408 )
texture = ExtResource( 3 )

[node name="Sprite47" type="Sprite" parent="Background"]
position = Vector2( 1664, 1408 )
texture = ExtResource( 3 )

[node name="Sprite48" type="Sprite" parent="Background"]
position = Vector2( 1920, 1408 )
texture = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer2/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer2/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer2/Audio" to="." method="_on_Audio_pressed"]
